# test10

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml  docker-compose.yml  justfile
.github/workflows/: integration.yml
admin/: Cargo.toml
app/: Cargo.toml
app/src/: core.rs  lib.rs
app/src/api/: mod.rs  route.rs
app/src/api/route/: entrypoint.rs
app/src/bootstrap/: mod.rs  shutdown.rs  state.rs
app/src/service/: manager.rs
cmd/: Cargo.toml
cmd/src/: main.rs
config/: config.toml
examples/: Cargo.toml
generate/: generate.ps1  generate.sh
macros/: Cargo.toml
models/: Cargo.toml
src/: error.rs  lib.rs  main.rs  prelude.rs  utils.rs
tests/: Cargo.toml
tests/src/: config_test.rs
utils/: Cargo.toml
utils/src/: config.rs  dber.rs  lib.rs  logger.rs
