[workspace]
members = [
    "macros",
    "utils",
    "models",
    "app", 
    "tests",
    "admin",
    "examples",
    "cmd"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jasper 张汉杰 <vainjoker@tuta.io>"]
readme = "README.md"
license = "GPL-3.0"
exclude = [".github", "CHANGELOG.md"]
repository = "https://github.com/vainjoker/ridge"
homepage = "https://github.com/vainjoker/ridge"
description = "A template of web server"

[workspace.dependencies]
utils = {path = "utils"}
macros = {path = "macros"}
app = {path = "app"}
admin = {path = "admin"}
models = {path = "models"}
itertools = "0.13"
serde = { version = "1.0", features = ["derive"] }
tracing = {git = "https://github.com/tokio-rs/tracing.git", branch = "master"}
snafu = "0.8.5"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "macros"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
axum = {version = "0.7", features = ["macros"]}

[profile.release]
strip = true

[workspace.lints.rust]
unsafe_code = "forbid"
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
wildcard_imports = "allow"
module_inception = "allow"
unwrap_used = "warn"
as_underscore = "warn"
deref_by_slicing = "warn"
else_if_without_else = "warn"
empty_line_after_doc_comments = "warn"
equatable_if_let = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
map_err_ignore = "warn"
missing_const_for_fn = "warn"
mixed_read_write_in_expression = "warn"
needless_raw_strings = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
use_self = "warn"
