[package]
name = "cmd"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
dotenvy = { version = "0.15" }
utils = { workspace = true }
app = { workspace = true }
admin = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
