[package]
name = "macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[lib]
proc-macro = true

[dependencies]
darling = { version = "0.20" }
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[lints]
workspace = true
