[package]
name = "tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
exclude.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
utils = {workspace = true}

[lints]
workspace = true
